--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myfirstwebsite</title>
     <link rel="stylesheet" href="myfirstwebsite.css">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </head>
 <body>
 
 
 <div class="navbar">
-  <img class="navimg" src="3dwallpaper/logical.jpg" alt="">
+  <img class="navimg" src="krpic/photo_2026-01-17_14-25-53.jpg" alt="">
   <div class="navitem">
     <div class="d-flex gap-2 mt-1">
       <a href="https://www.facebook.com/share/1DC2NfFPLh/ "target="_blank" class="btn btn-outline-light btn-sm rounded-pill fs-4">Facebook</a>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="section-image">
-      <img src="meme/foru.jpg" alt="">
+      <img src="krpic/photo_2026-01-17_14-25-21.jpg" alt="">
     </div>
   </div>
 
@@ -64,7 +64,7 @@
     
 
     <div class="section-image">
-      <img src="meme/rose.jpg" alt="">
+      <img src="krpic/OIP.png" alt="">
     </div>
     <div class="section-text">
       <h2>About</h2>
@@ -76,7 +76,7 @@
 </div>
 <div class="content-section2">
   <div class="section-img2">
-  <img src="3dwallpaper/mlbb.jpg" alt="">
+  <img src="krpic/photo_2026-01-17_14-25-31.jpg" alt="">
 
   </div>
 </div>
@@ -88,7 +88,7 @@
        Kamen rider is my favorite one in the tokusatsu serie:
        
       </p>
-      <form action="/contact.html">
+      <form action="contact.html">
   <div class="mb-3">
     <label for="username" class="form-label fs-4 text-light">Username</label>
     <input type="text" class="form-control" id="username" aria-describedby="emailHelp" required>
@@ -103,7 +103,7 @@
     </div>
 
     <div class="section-image">
-      <img src="3dwallpaper/heisei.jpg" alt="">
+      <img src="krpic/photo_2026-01-17_14-25-38.jpg" alt="">
     </div>
   </div>
 </div>
@@ -161,31 +161,9 @@
 
    </div>
 
-<div class="content-section"><div class="section-line2"><p>the language that I use to design these website</p></div>
 
-<div class="content-section">
-</div>
-<div class="d-flex flex-wrap gap-5">
- <div class="card " style="width: 20rem;">
-  <img src="3dwallpaper/html.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">HTML (Hypertext Markup Language) is a simple markup coding language used to layout content on a webpage. You use HTML programming language to tell web browsers how to display text, headings, images and other multimedia in the layout you want your users to see it in.</p>
-  </div>
-</div>
- <div class="card " style="width: 20rem;">
-  <img src="3dwallpaper/css.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML).</p>
-  </div>
-</div>
- <div class="card " style="width: 20rem;">
-  <img src="3dwallpaper/boo.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web. Download Bootstrap.</p>
-  </div>
-</div>
 
-</div>
+
 </div>
  </div>
 <div class="content-section">
